--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,30 +1,31 @@
-pkgs: 
+remi_php_fpm_pkgs: 
   - php-fpm
+  - php-pecl-crypto
   - php-pdo
-  - php-password-compat
+  - php-mbstring
   - php-mysqlnd
   - php-gd
+  - php-pecl-scrypt
+  - php-mcrypt
 
-service: php-fpm
+remi_php_fpm_service: php-fpm
 
-config_directory: /etc
-#master_config_file: /etc/php-fpm.conf
-#php_ini_file: /etc/php.ini
+remi_php_fpm_config_directory: /opt/remi/{{ php_version }}/root/etc
 
-pool_directory: /etc/php-fpm.d 
-modules_dir: /etc/php.d
+remi_php_fpm_pool_directory: /opt/remi/{{ php_version }}/root/etc/php-fpm.d 
+remi_php_fpm_modules_dir: /opt/remi/{{ php_version }}/root/etc/php.d
 
-default_owner: apache
+remi_php_fpm_default_owner: apache
 
-pidfile: /run/php-fpm/php-fpm.pid
+remi_php_fpm_pidfile: /opt/remi/{{ php_version }}/root/var/run/php-fpm
 
-error_log: /var/log/php-fpm/error.log
+remi_php_fpm_error_log: /opt/remi/php56/root/var/log/php-fpm/error.log
 
 # problem on debian: look at: /etc/init/php5-fpm.conf
-php_fpm_state_default: "reloaded"
+remi_php_fpm_default_state: "reloaded"
 
-daemonize: "{% if ansible_distribution_major_version|int > 6 %}no{% else %}yes{% endif %}"
+remi_php_fpm_daemonize: "{% if ansible_distribution_major_version|int > 6 %}no{% else %}yes{% endif %}"
 
-php_fpm_default_session_dir: "/var/lib/php/session"
-php_fpm_default_log_dir: "/var/log/php-fpm/"
+remi_php_fpm_default_session_dir: "/opt/remi/php56/root/var/lib/php/session"
+remi_php_fpm_default_log_dir: "/opt/remi/php56/root/var/log/php-fpm/"
 
