Add support for php70+ (new location of config and var directories).

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,9 +14,9 @@
 - name: Ensure master configuration is in place
   template: src={{ item.name + '.j2' }} dest={{ item.path + '/' + item.name }} owner=root group=root mode=0640 backup=yes
   with_items:
-    - { name: php-fpm.conf, path: "{{ remi_php_fpm_config_directory }}" }
-    - { name: php.ini, path: "{{ remi_php_fpm_config_directory }}" }
-    - { name: www.conf, path: "{{ remi_php_fpm_pool_directory }}" }
+    - { name: php-fpm.conf, path: "{{ remi_php_fpm_config_dir }}" }
+    - { name: php.ini, path: "{{ remi_php_fpm_config_dir }}" }
+    - { name: www.conf, path: "{{ remi_php_fpm_pool_dir }}" }
   notify: reload php-fpm
 
 - name: Ensure fpm users are available
